# mega

./: .gitignore  Cargo.toml  README.md  api.lua
commands/: hello.lua  predict.lua  roll.lua  time.lua
commands/game/: omnifactory.lua
src/: main.rs  mega_state.rs
src/audio/: mod.rs  speech_synthesis.rs
