[package]
name = "mega"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# opt-level = 3

[dependencies]
cpal = "0.11.0" # Get the audio from the microphone, and play it back
audrey = "0.2.0" # Convert audio from microphone into the kind that DeepSpeech likes
deepspeech = {path = "deepspeech-rs-master"} # Speech recognition. Locally cloned to fix an irritating bug for Windows...
# deepspeech = "0.7.0"
tv1d = "0.1.0" # noise reduction
winapi = {version = "0.3.8", features = [
    "sapi", "sapi51", "sapi53", # Speech synthesis
    "winnt", # Wide strings
    "combaseapi", # CoCreateInstance
    "objbase", # i don't even know
    "winerror"
]}